unpackaged/main/default/objects/Extension_Request__c/Extension_Request__c.object-meta.xml
<CustomObject>
    <label>Extension Request Audit Findings</label>
    <nameField>
        <displayFormat>ER-AF-{00000}</displayFormat>
        <label>ER-AF No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extension Requests Audit Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>