unpackaged/main/default/objects/Extension_Request__c/fields/Audit_Finding__c.field-meta.xml
<CustomField>
        <fullName>Audit_Finding__c</fullName>
        <label>Audit Finding</label>
        <referenceTo>Audit_Finding__c</referenceTo>
        <relationshipName>Extension_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>