unpackaged/main/default/objects/Extension_Request__c/fields/CMPL123_WF_Action_Performed_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Extension_RequestcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </CustomField>