unpackaged/main/default/objects/Extension_Request__c/validationRules/Proposed_Due_Date_cannot_be_in_the_past.validationRule-meta.xml
<ValidationRule>
        <fullName>Proposed_Due_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <description>Proposed Due Date cannot be in the past.</description>
        <errorConditionFormula>Proposed_Due_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Proposed_Due_Date__c</errorDisplayField>
        <errorMessage>Proposed Due Date cannot be in the past.</errorMessage>
    </ValidationRule>